--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
-baseURL: http://example.org/
+baseURL: https://gertvankruiningen.github.io/
 languageCode: en-us
 title: Gert's Stories
 theme: "PaperMod"
+publishdir: docs
